--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,18 @@ server.port=8081
 #eureka.client.fetch-registry=false
 
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/moddbnew?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&userSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/moddb?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&userSSL=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
 #spring.main.web-application-type=none
 
 spring.jpa.hibernate.ddl-auto=none
 
 #liquibase
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 #eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
